# Projflix

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  docker-compose.yml
Netflix android/: settings.gradle.kts
Netflix android/app/: build.gradle.kts
Netflix android/gradle/: libs.versions.toml
api/: Dockerfile.server  README.md  app.js  package-lock.json  package.json
api/controllers/: category.js  movie.js  recommend.js  user.js
api/middlewares/: auth.js  upload.js
api/models/: User.js  category.js  movie.js
api/routes/: api.js  (+4 more)
netflix/: Dockerfile.react  package-lock.json  package.json
recommend/: CMakeLists.txt  Dockerfile.recommender
recommend/src/App/: App.cpp  App.h  DataFileManager.cpp  DataFileManager.h  IDataManager.h  Parser.cpp  Parser.h
recommend/src/App/Commands/: AddCommand.cpp  AddCommand.h  DeleteCommand.cpp  DeleteCommand.h  GetCommand.cpp  GetCommand.h  HelpCommand.cpp  HelpCommand.h  ICommand.h  PatchCommand.cpp  PatchCommand.h  PostCommand.cpp  PostCommand.h  Recommend.cpp  Recommend.h
recommend/src/App/Menus/: ConsoleMenu.cpp  ConsoleMenu.h  IMenu.h  SocketMenu.cpp  SocketMenu.h
recommend/src/Server/: IServer.h  TcpServer.cpp  TcpServer.h  mainServer.cpp
recommend/src/Server/ClientHandlers/: ClientHandler.cpp  ClientHandler.h  ClientHandlerFactory.cpp  ClientHandlerFactory.h  IClientHandler.h  IClientHandlerFactory.h
recommend/src/Server/Threads/: IThread.h  IThreadManager.h  ThreadManager.cpp  ThreadManager.h  ThreadPerClient.cpp  ThreadPerClient.h  ThreadPoolManager.cpp  ThreadPoolManager.h
wiki/: android.md  web.md
(+140 files in other folders)
